--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <img class="cupido" src="assets/CupidoFacingRight.png" />
+      <p class="header-text">Matchmaker</p>
+      <img class="cupido" src="assets/CupidoFacingLeft.png" />
+    </div>
+  </body>
 </html>
