--- a/index.html
+++ b/index.html
@@ -15,5 +15,20 @@
       <p class="header-text">Matchmaker</p>
       <img class="cupido" src="assets/CupidoFacingLeft.png" />
     </div>
+    <div class="heart-area">
+      <img class="heart" src="assets/HeartOutlineTransparent.png" />
+    </div>
+    <div class="names-area">
+      <div class="left-name"></div>
+      <div class="heart-and-text">
+        <img class="test-heart" src="assets/FilledHeart.png" />
+        <p class="heart-text">Test!</p>
+      </div>
+      <div class="right-name"></div>
+    </div>
+    <div class="footer">
+      <img class="cupido" src="assets/CupidoFacingUpRight.png" />
+      <img class="cupido" src="assets/CupidoFacingUpLeft.png" />
+    </div>
   </body>
 </html>
