--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         />
       </div>
       <div class="heart-and-text">
-        <button onclick="calculateMatch()">
+        <button class="heart-button" onclick="calculateMatch()">
           <img class="test-heart" src="assets/FilledHeart.png" />
           <p class="heart-text">Test!</p>
         </button>
