--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       <img class="cupido" src="assets/CupidoFacingLeft.png" />
     </div>
     <div class="heart-area">
-      <div id="heart">
+      <p class="percentageText">Percentage :3</p>
+      <div id="heart">           
         <div class="fill"></div>
-        <div class="outline"></div>
+        <div class="outline"></div>      
       </div>
     </div>
     <div class="names-area">
