Percentage text added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img class="cupido" src="assets/CupidoFacingLeft.png" />
     </div>
     <div class="heart-area">
-      <p class="percentageText">Percentage :3</p>
+      <p class="percentageText" id="percentageText"></p>
       <div id="heart">           
         <div class="fill"></div>
         <div class="outline"></div>      
