--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <img class="cupido" src="assets/CupidoFacingLeft.png" />
     </div>
     <div class="heart-area">
-      <p class="percentageText" id="percentageText"></p>
+      <div class="text-area">
+        <p class="percentageText" id="percentageText"></p>
+      </div>
       <div id="heart">           
         <div class="fill"></div>
         <div class="outline"></div>      
