small mistake fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="heart-area">
       <div class="text-area">
-        <p class="percentageText" id="percentageText"></p>
+        <p class="percentageText" id="loveText"></p>
       </div>
       <div id="heart">           
         <div class="fill"></div>
@@ -43,7 +43,7 @@
       </div>
       <div class="right-name">
         <input
-          type="tekst"
+          type="text"
           id="nameB"
           name="nameB"
           maxlength="19"
