--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="heart-and-text">
         <button class="heart-button" onclick="pushButton()">
           <img class="test-heart" src="assets/FilledHeart.png" />
-          <p class="heart-text">Test!</p>
+          <p class="heart-text">Match!</p>
         </button>
       </div>
       <div class="right-name">
